<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLayoutEdit"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:background="@drawable/nav_background"
        android:id="@+id/editDoneBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:background="@drawable/button_3d"
            android:id="@+id/editReturn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back"
            android:contentDescription="@string/ReturnText"/>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/editDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/done"
            android:textColor="#ffd700"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/editTool_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageButton
            android:id="@+id/undo"
            android:background="@drawable/button_3d"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/ic_undo"
            android:contentDescription="撤销背景"/>

        <ImageButton
            android:id="@+id/bgImage"
            android:background="@drawable/button_3d"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/ic_image"
            android:contentDescription="更改背景"/>

        <ImageButton
            android:id="@+id/clearNote"
            android:background="@drawable/button_3d"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/ic_trash"
            android:contentDescription="清空笔记内容"/>

        <ImageButton
            android:id="@+id/shareNote"
            android:background="@drawable/button_3d"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/icons8_share"
            android:contentDescription="分享笔记"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintTop_toBottomOf="@id/editDoneBar"
        app:layout_constraintBottom_toTopOf="@id/editTool_bar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/note_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="10dp"
                android:autofillHints="Notes"
                android:hint="@string/noteTitle"
                android:inputType="textMultiLine"
                android:minHeight="48dp"
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/note_date"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="10dp"
                android:textAlignment="viewStart" />


            <EditText
                android:id="@+id/note_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="15dp"
                android:gravity="top"
                android:minHeight="495dp"
                android:hint="@string/hint_noteText"
                android:inputType="textMultiLine"
                tools:ignore="LabelFor,TouchTargetSizeCheck"
                android:autofillHints="Content..." />


        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>